--- a/.env
+++ b/.env
@@ -1,1 +1,5 @@
 VITE_API_BASE=https://425store.com/api/
+VITE_REPAIR_API=https://425store.com/api/list_repair.php
+VITE_PARTS_DAY=https://425store.com/api/parts_day.php
+VITE_EXPENSES_DAY=https://425store.com/api/expenses_day.php
+
