--- a/.env
+++ b/.env
@@ -1,13 +1,4 @@
-VITE_API_BASE=https://425store.com/api/
-VITE_API_BASE_URL=https://425store.com/api/export_all.php
-VITE_REPAIR_API=https://425store.com/api/list_repair.php
+VITE_EXPORT_ALL=https://425store.com/api/export_all.php
+VITE_VEHICLE_API=https://425store.com/api/vehicle_search.php
 VITE_PARTS_DAY=https://425store.com/api/parts_day.php
 VITE_EXPENSES_DAY=https://425store.com/api/expenses_day.php
-VITE_EXPENSES_DAY=https://425store.com/api/vehicle_search.php
-VITE_EXPENSES_DAY=https://425store.com/api/vehicle_get.php
-
-VITE_API_TOKEN=CHANGE_ME_STRONG_TOKEN
-
-
-
-
