--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ VITE_EXPORT_ALL=https://425store.com/api/export_all.php
 VITE_VEHICLE_API=https://425store.com/api/vehicle_search.php
 VITE_PARTS_DAY=https://425store.com/api/parts_day.php
 VITE_EXPENSES_DAY=https://425store.com/api/expenses_day.php
+VITE_TECHNICIAN_API=https://425store.com/api/technician_list.php
